arkts_static_test/03_Types/ets_cases/3.15.1_String_Literal_Types/compile-fail/TYP_03_15_01_010_FAIL_WRONG_VALUE.ets
/**
 * @id TYP_03_15_01_010_FAIL_WRONG_VALUE
 * @expect compile-fail
 * @section 3.15.1
 * @design 验证 string literal type 必须匹配字面量值
 * @note 反向用例：验证该场景应产生编译时错误
 */
let s: "hello" = "world"
